feat: implement proper pagination
