# libs/sdk-ts/model/pagination-metadata.ts
@@ -1,0 +1,48 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Follytics API
+ * Follytics API service
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * Contact: support@follytics.localhost
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface PaginationMetadata
+ */
+export interface PaginationMetadata {
+    /**
+     * 
+     * @type {number}
+     * @memberof PaginationMetadata
+     */
+    'limit'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PaginationMetadata
+     */
+    'page'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PaginationMetadata
+     */
+    'totalItems'?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PaginationMetadata
+     */
+    'totalPages'?: number;
+}
+
